--- a/index.html
+++ b/index.html
@@ -1,12 +1,326 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Metadatos -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Titulo -->
+    <title>SRI en Línea - Inicio</title>
+    <!-- Favicon -->
+    <link rel="icon" type:"image/x-icon" href="imagenes/favicon.ico">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style_index.css">
+    <!-- Iconos -->
+    <script src="https://kit.fontawesome.com/6ce83ec7a8.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="container-fluid p-0">
+    <header class="colorPrimario cabecera row">
+        <div class="col d-flex align-items-center">
+            <button tabindex="0" id="botonHamburguesa" class="colorPrimario mx-3 float-start fa-solid fa-bars" onclick="menuBarraLateral()"></button>
+            <img class="mx-3 logo float-start" src="imagenes/sri-en-linea.svg" alt="Logo SRI en línea">
+        </div>
+        <div class="col d-flex flex-row-reverse align-items-center">
+            <button tabindex="0" id="botonIniciarSesion" class="colorPrimario mx-5 float-end"><i class=" fa-solid fa-user"></i>
+                Iniciar Sesión</button>
+        </div>
+    </header>
+    <!-- Menu de opciones -->
+    <div class="barraLateral" id="barraLateral" style="display: none;">
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-solid fa-key icono2" ></i>
+                <p class="text" >CLAVES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-solid fa-building-user icono2" tabindex="0"></i>
+                <p class="text" >RISE</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-regular fa-address-card icono2" tabindex="0"></i>
+                <p class="text" >RUC</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-solid fa-hand-holding-dollar icono2" tabindex="0"></i>
+                <p class="text" >FACTURACIÓN FÍSICA</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="mdi:account-payment" tabindex="0"></iconify-icon></i>
+                <p class="text" >FACTURACIÓN ELECTRÓNICA</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="mdi:document-sign" tabindex="0"></iconify-icon></i>
+                <p class="text" >DECLARACIONES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="mdi:file-document-box-multiple" tabindex="0"></iconify-icon></i>
+                <p class="text" >ANEXOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="medical-icon:i-billing" tabindex="0"></iconify-icon></i>
+                <p class="text" >PAGOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="fa6-regular:money-bill-1" tabindex="0"></iconify-icon></i>
+                <p class="text" >DEUDAS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="ri:refund-2-line" tabindex="0"></iconify-icon></i>
+                <p class="text" >DEVOLUCIONES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="vaadin:money-withdraw" tabindex="0"></iconify-icon></i>
+                <p class="text" >REINTEGRO DE VALORES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0"><iconify-icon icon="material-symbols:chat-rounded"></iconify-icon></i>
+                <p class="text" >TRAMITE Y NOTIFICACIONES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0"><iconify-icon icon="mdi:certificate-outline"></iconify-icon></i>
+                <p class="text" >CERTIFICADOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0" ><iconify-icon icon="material-symbols:directions-car"></iconify-icon></i>
+                <p class="text" ><button onclick="opcionSubmenu()" tabindex="0">VEHÍCULOS</button></p>
+            </div>
+            <div id="submenu" style="display:none;">
+                <li tabindex="0">Valores a pagar por placa, RAMV, CPN, o chasis</li>
+                <li>
+                    <a href="consulta.html">Reporte de pagos</a>
+                </li>
+                <li tabindex="0">Plan exepcional de pagos del impuesto Ambiental</li>
+                <li tabindex="0">Consulta de subcategoria por trámite</li>
+                <li tabindex="0">Consulte sus vehículos</li>
+                <li tabindex="0">Exonere sus vehículos</li>
+                <li tabindex="0">Conozca más ...</li>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0"><iconify-icon icon="ic:outline-miscellaneous-services"></iconify-icon></i>
+                <p class="text" >OTROS SERVICIOS</p>
+            </div>
+        </div>
+    </div>
+
+    <main>
+        <section class="container">
+            <div class="row">
+                <div class="col">
+                    <h1 tabindex="0" class="titulo">Servicios de SRI en Línea</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h2 tabindex="0" class="subtitulo">¿Cómo podemos ayudarte?</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <form class="d-flex busqueda" role="Buscar">
+                        <div class="input-group">
+                          <input class="form-control me-2" type="search" placeholder="Buscar servicio" aria-label="Buscar">
+                          <button class="btn btn-primary" type="submit">
+                            <i class="fas fa-search"></i>
+                          </button>
+                        </div>
+                      </form>
+                </div>
+            </div>
+            <section class="matrizDeOpciones">
+                <div class="container matriz">
+                    <!-- FILA 1 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell " tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="fa-solid fa-key icono2" tabindex="0"></i>
+                                <p class="text" tabindex="0">Claves</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="fa-solid fa-building-user icono2" tabindex="0"></i>
+                                <p class="text" tabindex="0">RISE</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 2 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="fa-regular fa-address-card icono2" tabindex="0"></i>
+                                <p class="text" tabindex="0">RUC</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="fa-solid fa-hand-holding-dollar icono2" tabindex="0"></i>
+                                <p class="text" tabindex="0">Facturación física</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 3 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="mdi:account-payment" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Facturación electrónica</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="mdi:document-sign" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Declaraciones</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 4 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="mdi:file-document-box-multiple" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Anexos</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="medical-icon:i-billing" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Pagos</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 5 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="fa6-regular:money-bill-1" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Deudas</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="ri:refund-2-line" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Devoluciones</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 6 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2"><iconify-icon icon="vaadin:money-withdraw" tabindex="0"></iconify-icon></i>
+                                <p class="text" tabindex="0">Reintegro de valores</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2" tabindex="0"><iconify-icon icon="material-symbols:chat-rounded"></iconify-icon></i>
+                                <p class="text" tabindex="0">Tramite y notificaciones</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 7 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus"tabindex="0"></i>
+                                <i class="icono2" tabindex="0"><iconify-icon icon="mdi:certificate-outline"></iconify-icon></i>
+                                <p class="text" tabindex="0">Certificados</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0" onclick="toggleSubmenuOpciones()" ></i>
+                                <i class="icono2" tabindex="0" ><iconify-icon icon="material-symbols:directions-car"></iconify-icon></i>
+                                <p class="text" tabindex="0">Vehiculos</p>
+                            </div>
+                            <div class="submenuOpciones" id="submenuOpciones" style="display: none;">
+                                <ul>
+                                    <li tabindex="0">Valores a pagar por placa, RAMV, CPN, o chasis</li>
+                                    <li>
+                                        <a href="consulta.html">Reporte de pagos</a>
+                                    </li>
+                                    <li tabindex="0">Plan exepcional de pagos del impuesto Ambiental</li>
+                                    <li tabindex="0">Consulta de subcategoria por trámite</li>
+                                    <li tabindex="0">Consulte sus vehículos</li>
+                                    <li tabindex="0">Exonere sus vehículos</li>
+                                    <li tabindex="0">Conozca más ...</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FILA 8 -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="cell" tabindex="0">
+                                <i class="fa-solid fa-circle-plus" tabindex="0"></i>
+                                <i class="icono2" tabindex="0"><iconify-icon icon="ic:outline-miscellaneous-services"></iconify-icon></i>
+                                <p class="text" tabindex="0">Otros servicios</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+    </main>
     
+    <script src="js/script_index.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.5/iconify-icon.min.js"></script>
 </body>
 </html>
