Conexion de pantallas y implementación de detalle

--- a/consulta.html
+++ b/consulta.html
@@ -26,7 +26,7 @@
     <nav class="row">
         <div class="col d-flex">
             <nav class="d-flex m-3">
-                <li><a href="" class="fa-solid fa-house"></a></li>
+                <li><a href="index.html" class="fa-solid fa-house"></a></li>
                 <li><em class="fa-solid fa-angle-right"></em></li>
                 <li><a href="">Vehículos</a></li>
                 <li><em class="fa-solid fa-angle-right"></em></li>
@@ -70,10 +70,10 @@
             <div class="col-0 col-sm-3 col-lg-4"></div>
             <div class="col-12  col-sm-6 col-lg-4 consulta">
                 <h4 tabindex="0">Consulta reporte de pagos</h4>
-                <form action="">
+                <form action="reporte.html">
                     <label for="ingresoDatos">Ingresar  Placa, RAMV o CPN: </label><br>
                     <input type="text" id="ingresoDatos" placeholder="Ejemplo: MNA0123" ><br>
-                    <input type="button" name="" id="consultar" value="Consultar">
+                    <input type="submit" name="" id="consultar" value="Consultar">
                 </form>
                 <div class="download">
                     <a href="documents/MANUAL DE USO REPORTE DE PAGOS.pdf" class="no-decoration" download="MANUAL DE USO REPORTE DE PAGOS">
