--- a/consulta.html
+++ b/consulta.html
@@ -19,7 +19,7 @@
             <img class="mx-3 logo float-start" src="imagenes/sri-en-linea.svg" alt="Logo SRI en línea">
         </div>
         <div class="col d-flex flex-row-reverse align-items-center">
-            <button tabindex="0" id="botonIniciarSesion" class="colorPrimario mx-5 float-end"><i class=" fa-solid fa-user"></i>
+            <button tabindex="0" id="botonIniciarSesion" class="colorPrimario mx-5 float-end"><em class=" fa-solid fa-user"></em>
                 Iniciar Sesión</button>
         </div>
     </header>
