--- a/reporte.html
+++ b/reporte.html
@@ -230,92 +230,97 @@
             </div>
         </div>
 
-        <div class="fondo_transparente container-fluid">
-            <div class="caja bg-white">
-                <div class="d-flex justify-content-between justify-align-center">
-                    <h1 class="mt-4 ms-4" tabindex="0">Detalle del pago de valor de matrícula</h1>
-                    <div class="modal_cerrar mt-1 me-1" tabindex="0">
-                        <i class="fa fa-xmark fa-2x"></i>
-                    </div>
+    </section>
+    <div class="fondo_transparente container-fluid">
+        <div class="caja bg-white">
+            <div class="d-flex justify-content-between justify-align-center">
+                <h1 class="mt-4 ms-4" tabindex="0">Detalle del pago de valor de matrícula</h1>
+                <div class="modal_cerrar mt-1 me-1" tabindex="0">
+                    <i class="fa fa-xmark fa-2x"></i>
                 </div>
-                <div class="align-items-center">
-                    <div class="col d-flex flex-wrap d-flex justify-content-between ms-4 me-4">
-                        <div class="col-3 m-4 p-0">
-                            <div class="mb-3 bloque">
-                                <h3 class="fs-24-bold mb-1" tabindex="0">Placa, RAMV o CPN actual</h3>
-                                <p class="fs-18 m-1" tabindex="0">PCA 2445</p>
-                            </div>
-                            <div class="mb-3 bloque mt-5">
-                                <h3 class="fs-24-bold mb-1" tabindex="0">Placa, RAMV o CPN de pago</h3>
-                                <p class="fs-18 m-1" tabindex="0">PCA 2445</p>
-                            </div>
+            </div>
+            <div class="align-items-center columnas">
+                <div class="col d-flex flex-wrap justify-content-between ms-4 me-4">
+                    <div class="d-flex justify-content-around p-0">
+                        <div class="bloque">
+                            <h3 class="fs-24-bold mb-1" tabindex="0">Placa, RAMV o CPN actual</h3>
+                            <p class="fs-18 m-1" tabindex="0">PCA 2445</p>
                         </div>
-                        <div class="col-3 m-4 p-0">
-                            <div class="mb-3 bloque">
-                                <h3 class="fs-24-bold mb-1" tabindex="0">Institución Financiera</h3>
-                                <p class="fs-18 m-1" tabindex="0">COOPERATIVA DE AHORRO Y CRÉDITO 29 DE OCTUBRE LTDA.</p>
-                            </div>
-                            <div class="mb-3 bloque">
-                                <h3 class="fs-24-bold mb-1" tabindex="0">Tipo de Deuda</h3>
-                                <p class="fs-18 m-1" tabindex="0">PAGO DEL VALOR DE LA MATRÍCULA</p>
-                            </div>
+                        <div class="bloque">
+                            <h3 class="fs-24-bold mb-1" tabindex="0">Institución Financiera</h3>
+                            <p class="fs-18 m-1" tabindex="0">COOPERATIVA DE AHORRO Y CRÉDITO 29 DE OCTUBRE LTDA.</p>
                         </div>
-                        <div class="col-3 m-4 p-0">
-                            <div class="mb-3 bloque">
-                                <h3 class="fs-24-bold mb-1" tabindex="0">Fecha de Pago</h3>
-                                <p class="fs-18 m-1" tabindex="0">2021-03-22 06:21</p>
-                            </div>
-                            <div class="mb-3 bloque mt-75">
-                                <h3 class="fs-24-bold mb-1" tabindex="0">Comprobante</h3>
-                                <p class="fs-18 m-1" tabindex="0">12125689513264562315</p>
-                            </div>
+                        <div class="bloque">
+                            <h3 class="fs-24-bold mb-1" tabindex="0">Fecha de Pago</h3>
+                            <p class="fs-18 m-1" tabindex="0">2021-03-22 06:21</p>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between p-0">
+                        <div class="bloque">
+                            <h3 class="fs-24-bold mb-1" tabindex="0">Placa, RAMV o CPN de pago</h3>
+                            <p class="fs-18 m-1" tabindex="0">PCA 2445</p>
+                        </div>
+                        <div class="bloque">
+                            <h3 class="fs-24-bold mb-1" tabindex="0">Tipo de Deuda</h3>
+                            <p class="fs-18 m-1" tabindex="0">PAGO DEL VALOR DE LA MATRÍCULA</p>
+                        </div>
+                        <div class="bloque">
+                            <h3 class="fs-24-bold mb-1" tabindex="0">Comprobante</h3>
+                            <p class="fs-18 m-1" tabindex="0">12125689513264562315</p>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col d-flex flex-wrap justify-content-around align-items-center">
-                        <table tabindex="0" class="centrarTexto tablaReportes"  border="1">
-                            <tr class="colorPrimario colorSecundarioFuente">
-                                <th scope="col" tabindex="0">Rubro <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                                <th tabindex="0">Componente <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                                <th tabindex="0">Año <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                                <th tabindex="0">Valor <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            </tr>
-                            <tr>
-                                <td tabindex="0">Impuesto a la propiedad</td>
-                                <td tabindex="0">Impuesto</td>
-                                <td tabindex="0">2020</td>
-                                <td tabindex="0">$6.00</td>
-                            </tr>
-                            <tr class="colorSecundario">
-                                <td tabindex="0">Impuesto a la propiedad</td>
-                                <td tabindex="0">Impuesto</td>
-                                <td tabindex="0">2020</td>
-                                <td tabindex="0">$6.00</td>
-                            </tr>
-                            <tr>
-                                <td tabindex="0">Impuesto a la propiedad</td>
-                                <td tabindex="0">Impuesto</td>
-                                <td tabindex="0">2020</td>
-                                <td tabindex="0">$6.00</td>
-                            </tr>
-                            <tr class="colorSecundario">
-                                <td tabindex="0">Impuesto a la propiedad</td>
-                                <td tabindex="0">Impuesto</td>
-                                <td tabindex="0">2020</td>
-                                <td tabindex="0">$6.00</td>
-                            </tr>
-                            <tr>
-                                <td tabindex="0">Impuesto a la propiedad</td>
-                                <td tabindex="0">Impuesto</td>
-                                <td tabindex="0">2020</td>
-                                <td tabindex="0">$6.00</td>
-                            </tr>
-                        </table>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col d-flex flex-wrap justify-content-around align-items-center">
+                    <table tabindex="0" class="centrarTexto tablaReportes">
+                        <tr class="colorPrimario colorSecundarioFuente">
+                            <th scope="col" tabindex="0">Rubro <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0">Componente <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0">Año <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0">Valor <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                        </tr>
+                        <tr>
+                            <td tabindex="0">Impuesto a la propiedad</td>
+                            <td tabindex="0">Impuesto</td>
+                            <td tabindex="0">2020</td>
+                            <td tabindex="0">$6.00</td>
+                        </tr>
+                        <tr class="colorSecundario">
+                            <td tabindex="0">Impuesto a la propiedad</td>
+                            <td tabindex="0">Impuesto</td>
+                            <td tabindex="0">2020</td>
+                            <td tabindex="0">$6.00</td>
+                        </tr>
+                        <tr>
+                            <td tabindex="0">Impuesto a la propiedad</td>
+                            <td tabindex="0">Impuesto</td>
+                            <td tabindex="0">2020</td>
+                            <td tabindex="0">$6.00</td>
+                        </tr>
+                        <tr class="colorSecundario">
+                            <td tabindex="0">Impuesto a la propiedad</td>
+                            <td tabindex="0">Impuesto</td>
+                            <td tabindex="0">2020</td>
+                            <td tabindex="0">$6.00</td>
+                        </tr>
+                        <tr>
+                            <td tabindex="0">Impuesto a la propiedad</td>
+                            <td tabindex="0">Impuesto</td>
+                            <td tabindex="0">2020</td>
+                            <td tabindex="0">$6.00</td>
+                        </tr>
+                        <tr class="colorSecundario">
+                            <td tabindex="0">Impuesto a la propiedad</td>
+                            <td tabindex="0">Impuesto</td>
+                            <td tabindex="0">2020</td>
+                            <td tabindex="0">$6.00</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
-    </section>
+    <div id="overlay"></div>
     <script src="./js/script_informacion.js"></script>
     <script src="js/script_reporte.js"></script>
 </body>
