Inclusión de aria-label, tab-index en la ventana desplegable.

--- a/reporte.html
+++ b/reporte.html
@@ -232,15 +232,15 @@
 
     </section>
     <div class="fondo_transparente container-fluid">
-        <div class="caja bg-white">
+        <div class="caja bg-white" tabindex="0" aria-label="Ventana desplegable del detalle de pagos del valor de matrícula." aria-live="assertive">
             <div class="d-flex justify-content-between justify-align-center">
-                <h1 class="mt-4 ms-4" tabindex="0">Detalle del pago de valor de matrícula</h1>
-                <div class="modal_cerrar mt-1 me-1" tabindex="0">
-                    <i class="fa fa-xmark fa-2x"></i>
+                <h1 class="mt-4 ms-4" tabindex="0" alt="Título de la página desplegable">Detalle del pago de valor de matrícula</h1>
+                <div class="modal_cerrar mt-1 me-1" tabindex="0" aria-label="Botón para cerrar la ventana desplegable">
+                    <i class="fa fa-xmark fa-2x" aria-label="ícono de una x para cerrar la ventana desplegable"></i>
                 </div>
             </div>
             <div class="align-items-center columnas">
-                <div class="col d-flex flex-wrap justify-content-between ms-4 me-4">
+                <div class="col d-flex flex-wrap justify-content-between ms-4 me-4" tabindex="0" aria-label="Información del pago realizado">
                     <div class="d-flex justify-content-around p-0">
                         <div class="bloque">
                             <h3 class="fs-24-bold mb-1" tabindex="0">Placa, RAMV o CPN actual</h3>
@@ -273,12 +273,12 @@
             </div>
             <div class="row">
                 <div class="col d-flex flex-wrap justify-content-around align-items-center">
-                    <table tabindex="0" class="centrarTexto tablaReportes">
-                        <tr class="colorPrimario colorSecundarioFuente">
-                            <th scope="col" tabindex="0">Rubro <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            <th tabindex="0">Componente <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            <th tabindex="0">Año <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            <th tabindex="0">Valor <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                    <table tabindex="0" class="centrarTexto tablaReportes" aria-label="Tabla que detalla los pagos del valor de matrícula.">
+                        <tr class="colorPrimario colorSecundarioFuente" aria-label="Encabezados de la tabla de detalle de pagos">
+                            <th scope="col" tabindex="0" aria-label="Encabezado rubro">Rubro <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0" aria-label="Encabezado componente">Componente <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0" aria-label="Encabezado año">Año <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0" aria-label="Encabezado valor">Valor <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
                         </tr>
                         <tr>
                             <td tabindex="0">Impuesto a la propiedad</td>
