Actualizacion de tabla e indicacion de filas

--- a/reporte.html
+++ b/reporte.html
@@ -239,8 +239,9 @@
                     <i class="fa fa-xmark fa-2x" aria-label="ícono de una x para cerrar la ventana desplegable"></i>
                 </div>
             </div>
+            <h2 class="fs-24-bold mb-1" tabindex="0" alt="Información detallada de pago">Información detallada de pago</h2>
             <div class="align-items-center columnas">
-                <div class="col d-flex flex-wrap justify-content-between ms-4 me-4" tabindex="0" aria-label="Información del pago realizado">
+                <div class="col d-flex flex-wrap justify-content-between ms-4 me-4" tabindex="0" aria-label="Información del pago realizado estructurado en 2 filas con 3 columnas en forma de bloque">
                     <div class="d-flex justify-content-around p-0">
                         <div class="bloque">
                             <h3 class="fs-24-bold mb-1" tabindex="0">Placa, RAMV o CPN actual</h3>
@@ -275,42 +276,42 @@
                 <div class="col d-flex flex-wrap justify-content-around align-items-center">
                     <table tabindex="0" class="centrarTexto tablaReportes" aria-label="Tabla que detalla los pagos del valor de matrícula.">
                         <tr class="colorPrimario colorSecundarioFuente" aria-label="Encabezados de la tabla de detalle de pagos">
-                            <th scope="col" tabindex="0" aria-label="Encabezado rubro">Rubro <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            <th tabindex="0" aria-label="Encabezado componente">Componente <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            <th tabindex="0" aria-label="Encabezado año">Año <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
-                            <th tabindex="0" aria-label="Encabezado valor">Valor <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th scope="col" tabindex="0" aria-label="Columna rubro">Rubro <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0" aria-label="Columna componente">Componente <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0" aria-label="Columna año">Año <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
+                            <th tabindex="0" aria-label="Columna valor">Valor <i class="colorSecundarioFuente fa-sharp fa-solid fa-caret-down"></i></th>
                         </tr>
-                        <tr>
+                        <tr  tabindex="0" aria-label="Fila 1">
                             <td tabindex="0">Impuesto a la propiedad</td>
                             <td tabindex="0">Impuesto</td>
                             <td tabindex="0">2020</td>
                             <td tabindex="0">$6.00</td>
                         </tr>
-                        <tr class="colorSecundario">
+                        <tr class="colorSecundario" tabindex="0" aria-label="Fila 2">
                             <td tabindex="0">Impuesto a la propiedad</td>
                             <td tabindex="0">Impuesto</td>
                             <td tabindex="0">2020</td>
                             <td tabindex="0">$6.00</td>
                         </tr>
-                        <tr>
+                        <tr tabindex="0" aria-label="Fila 3">
                             <td tabindex="0">Impuesto a la propiedad</td>
                             <td tabindex="0">Impuesto</td>
                             <td tabindex="0">2020</td>
                             <td tabindex="0">$6.00</td>
                         </tr>
-                        <tr class="colorSecundario">
+                        <tr class="colorSecundario" tabindex="0" aria-label="Fila 4">
                             <td tabindex="0">Impuesto a la propiedad</td>
                             <td tabindex="0">Impuesto</td>
                             <td tabindex="0">2020</td>
                             <td tabindex="0">$6.00</td>
                         </tr>
-                        <tr>
+                        <tr tabindex="0" aria-label="Fila 5">
                             <td tabindex="0">Impuesto a la propiedad</td>
                             <td tabindex="0">Impuesto</td>
                             <td tabindex="0">2020</td>
                             <td tabindex="0">$6.00</td>
                         </tr>
-                        <tr class="colorSecundario">
+                        <tr class="colorSecundario" tabindex="0" aria-label="Fila 6">
                             <td tabindex="0">Impuesto a la propiedad</td>
                             <td tabindex="0">Impuesto</td>
                             <td tabindex="0">2020</td>
