--- a/consulta.html
+++ b/consulta.html
@@ -10,12 +10,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Reporte de Pagos</title>
+    <!-- Favicon -->
+    <link rel="icon" type:"image/x-icon" href="imagenes/favicon.ico">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style_index.css">
+    <!-- Iconos -->
+    <script src="https://kit.fontawesome.com/6ce83ec7a8.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="container-fluid p-0">
+    
     <header class="colorPrimario cabecera row">
         <div class="col d-flex align-items-center">
-            <button tabindex="0" id="botonHamburguesa" class="colorPrimario mx-3 float-start fa-solid fa-bars"></button>
+            <button title="Servicios barra lateral" tabindex="0" id="botonHamburguesa" class="colorPrimario mx-3 float-start fa-solid fa-bars" onclick="menuBarraLateral()"></button>
             <img class="mx-3 logo float-start" src="imagenes/sri-en-linea.svg" alt="Logo SRI en línea">
         </div>
         <div class="col d-flex flex-row-reverse align-items-center">
@@ -23,6 +32,133 @@
                 Iniciar Sesión</button>
         </div>
     </header>
+    <!---->
+    <div class="font-lng">
+        <button onclick="cambiarTamanoLetra(-1)" title="disminuir tamaño letra"><em class="fa-solid fa-circle-minus"></em></button>
+        <span>Tamaño de letra</span>
+        <button onclick="cambiarTamanoLetra(1)" title="aumentar tamaño letra"><em class="fa-solid fa-circle-plus"></em></button>
+    </div>
+
+    <!-- Menu de opciones -->
+    <div class="barraLateral" id="barraLateral" style="display: none;">
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-solid fa-key icono2" ></i>
+                <p class="text" >CLAVES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-solid fa-building-user icono2" tabindex="0"></i>
+                <p class="text" >RISE</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-regular fa-address-card icono2" tabindex="0"></i>
+                <p class="text" >RUC</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="fa-solid fa-hand-holding-dollar icono2" tabindex="0"></i>
+                <p class="text" >FACTURACIÓN FÍSICA</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="mdi:account-payment" tabindex="0"></iconify-icon></i>
+                <p class="text" >FACTURACIÓN ELECTRÓNICA</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="mdi:document-sign" tabindex="0"></iconify-icon></i>
+                <p class="text" >DECLARACIONES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="mdi:file-document-box-multiple" tabindex="0"></iconify-icon></i>
+                <p class="text" >ANEXOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="medical-icon:i-billing" tabindex="0"></iconify-icon></i>
+                <p class="text" >PAGOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="fa6-regular:money-bill-1" tabindex="0"></iconify-icon></i>
+                <p class="text" >DEUDAS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="ri:refund-2-line" tabindex="0"></iconify-icon></i>
+                <p class="text" >DEVOLUCIONES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2"><iconify-icon icon="vaadin:money-withdraw" tabindex="0"></iconify-icon></i>
+                <p class="text" >REINTEGRO DE VALORES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0"><iconify-icon icon="material-symbols:chat-rounded"></iconify-icon></i>
+                <p class="text" >TRAMITE Y NOTIFICACIONES</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0"><iconify-icon icon="mdi:certificate-outline"></iconify-icon></i>
+                <p class="text" >CERTIFICADOS</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0" onclick="opcionSubmenu()">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0" ><iconify-icon icon="material-symbols:directions-car"></iconify-icon></i>
+                <p class="text" tabindex="0">VEHÍCULOS</p>
+            </div>
+            <div id="submenu" style="display:none;">
+                <li tabindex="0">Valores a pagar por placa, RAMV, CPN, o chasis</li>
+                <li>
+                    <a href="consulta.html">Reporte de pagos</a>
+                </li>
+                <li tabindex="0">Plan exepcional de pagos del impuesto Ambiental</li>
+                <li tabindex="0">Consulta de subcategoria por trámite</li>
+                <li tabindex="0">Consulte sus vehículos</li>
+                <li tabindex="0">Exonere sus vehículos</li>
+                <li tabindex="0">Conozca más ...</li>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" tabindex="0">
+                <i class="fa-solid fa-caret-right"></i>
+                <i class="icono2" tabindex="0"><iconify-icon icon="ic:outline-miscellaneous-services"></iconify-icon></i>
+                <p class="text" >OTROS SERVICIOS</p>
+            </div>
+        </div>
+    </div>
+
     <nav class="row">
         <div class="col d-flex">
             <nav class="d-flex m-3">
@@ -51,11 +187,10 @@
                     Consulte los pagos realizados de su vehículo, ingresando uno de los siguientes datos:
                 </p>
                 <ul>
-                    <li tabindex="0"> <strong> Placa</strong> : Identificación vehicular otorgada por la Entidad de Tránsito EJ : <strong>AAA0123</strong></li>
-                    <li tabindex="0"><strong> RAMV </strong>: Registro Aduanero de Matriculación Vehicular - Vehículo importado EJ :
-                        <strong>T00123456</strong>
+                    <li tabindex="0"> <strong> Placa</strong> : Identificación vehicular otorgada por la Entidad de Tránsito <strong>Ejemplo: AAA0123</strong></li>
+                    <li tabindex="0"><strong> RAMV </strong>: Registro Aduanero de Matriculación Vehicular - Vehículo importado <strong>Ejemplo:T00123456</strong>
                     </li>
-                    <li tabindex="0"><strong> CPN</strong> : Certificado de Producción Nacional - Vehículo ensamblado EJ : <strong>B0012345678</strong>
+                    <li tabindex="0"><strong> CPN</strong> : Certificado de Producción Nacional - Vehículo ensamblado <strong>Ejemplo: B0012345678</strong>
                     </li>
                 </ul>
             </div>
@@ -69,11 +204,11 @@
         <div class="row">
             <div class="col-0 col-sm-3 col-lg-4"></div>
             <div class="col-12  col-sm-6 col-lg-4 consulta">
-                <h4 tabindex="0">Consulta reporte de pagos</h4>
-                <form action="reporte.html">
+                <h2 tabindex="0" >Consulta reporte de pagos</h2>
+                <form action="" id="consulta_form">
                     <label for="ingresoDatos">Ingresar  Placa, RAMV o CPN: </label><br>
-                    <input type="text" id="ingresoDatos" placeholder="Ejemplo: MNA0123" ><br>
-                    <input type="submit" name="" id="consultar" value="Consultar">
+                    <input type="text" id="ingresoDatos" placeholder="Ejemplo: MNA0123" onkeydown="if (event.keyCode === 13) mostrar_advertencia()"><br>
+                    <input type="button" name="" id="consultar" value="Consultar" onclick="mostrar_advertencia()">
                 </form>
                 <div class="download">
                     <a href="documents/MANUAL DE USO REPORTE DE PAGOS.pdf" class="no-decoration" download="MANUAL DE USO REPORTE DE PAGOS">
@@ -81,7 +216,11 @@
                         <div class="download-p inline-block">Descargar manual de uso de reporte de pagos</div>
                     </a>
                 </div>
-                <p  tabindex="0" class="alert"><strong>
+                <dialog id="dialog-box" aria-label="Ventana emergente" aria-labelledby="dialog-box-label">
+                    <p tabindex="0">Error: Ingresó una placa NO válida</p>
+                    <button id="advertencia" onclick="cerrar_ventana()">Cerrar ventana</button>
+                </dialog>
+                <p tabindex="0" class="alert"><strong>
                     Si no encuentra su vehículo con la placa consultada, solicite a la Entidad de Tránsito la actualización de esta información.
                 </strong>
                 </p>
@@ -91,6 +230,10 @@
         </div>
 
     </section>
+
+    <script src="js/script_consulta.js"></script>
+    <script src="js/script_index.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.5/iconify-icon.min.js"></script>
 </body>
 
 </html>
